<resources>
    <string name="app_name">CreativasPrint</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="dont_have_account_register">¿No tienes cuenta? Regístrate</string>
    <string name="register">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar Contraseña</string>
</resources>